Remove warnings in test